# MayaPluginCmake

./: .gitignore  CMakeLists.txt  README.md
src/: pluginMain.cpp
